--- a/defconfig/bcmrpi3_defconfig
+++ b/defconfig/bcmrpi3_defconfig
@@ -695,32 +695,51 @@ CONFIG_HW_RANDOM=y
 CONFIG_TCG_TPM=m
 CONFIG_TCG_TIS_SPI=m
 CONFIG_I2C=y
-CONFIG_I2C_CHARDEV=m
+CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=y
+CONFIG_I2C_ARB_GPIO_CHALLENGE=m
+CONFIG_I2C_MUX_GPIO=m
 CONFIG_I2C_MUX_GPMUX=m
-CONFIG_I2C_MUX_PCA954x=m
+CONFIG_I2C_MUX_LTC4306=m
+CONFIG_I2C_MUX_PCA9541=y
+CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_MUX_PINCTRL=m
-CONFIG_I2C_BCM2835=m
-# CONFIG_I2C_BRCMSTB is not set
+CONFIG_I2C_MUX_REG=m
+CONFIG_I2C_DEMUX_PINCTRL=m
+CONFIG_I2C_MUX_MLXCPLD=m
+CONFIG_I2C_BCM2835=y
+CONFIG_I2C_BRCMSTB=m
+CONFIG_I2C_CBUS_GPIO=m
+CONFIG_I2C_DESIGNWARE_SLAVE=y
+CONFIG_I2C_DESIGNWARE_PLATFORM=m
 CONFIG_I2C_GPIO=m
+CONFIG_I2C_PCA_PLATFORM=m
 CONFIG_I2C_ROBOTFUZZ_OSIF=m
-CONFIG_I2C_TINY_USB=m
+CONFIG_I2C_TINY_USB=y
 CONFIG_SPI=y
-CONFIG_SPI_BCM2835=m
-CONFIG_SPI_BCM2835AUX=m
+CONFIG_SPI_BCM2835=y
+CONFIG_SPI_BCM2835AUX=y
+CONFIG_SPI_NXP_FLEXSPI=m
 CONFIG_SPI_GPIO=m
+CONFIG_SPI_SC18IS602=y
+CONFIG_SPI_MUX=m
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPI_SLAVE=y
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
 CONFIG_PINCTRL_MCP23S08=m
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_GENERIC_PLATFORM=m
+CONFIG_GPIO_SYSCON=m
 CONFIG_GPIO_MAX7300=m
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_GPIO_PCA9570=m
 CONFIG_GPIO_PCF857X=m
 CONFIG_GPIO_ARIZONA=m
 CONFIG_GPIO_STMPE=y
 CONFIG_GPIO_MAX7301=m
+CONFIG_GPIO_PISOSR=m
 CONFIG_GPIO_MOCKUP=m
 CONFIG_W1=y
 CONFIG_W1_MASTER_DS2490=m
@@ -772,6 +791,8 @@ CONFIG_GPIO_WATCHDOG=m
 CONFIG_BCM2835_WDT=y
 CONFIG_SSB=y
 CONFIG_BCMA=y
+CONFIG_MFD_BCM590XX=m
+CONFIG_MFD_SIMPLE_MFD_I2C=y
 CONFIG_MFD_STMPE=y
 CONFIG_STMPE_SPI=y
 CONFIG_MFD_SYSCON=y
@@ -783,7 +804,11 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ARIZONA_LDO1=m
 CONFIG_REGULATOR_ARIZONA_MICSUPP=m
 CONFIG_REGULATOR_GPIO=y
+CONFIG_REGULATOR_PCA9450=m
+CONFIG_REGULATOR_PF8X00=m
+CONFIG_REGULATOR_PWM=m
 CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY=m
+CONFIG_REGULATOR_VCTRL=m
 CONFIG_RC_CORE=y
 CONFIG_BPF_LIRC_MODE2=y
 CONFIG_LIRC=y
@@ -794,6 +819,7 @@ CONFIG_IR_MCE_KBD_DECODER=m
 CONFIG_IR_NEC_DECODER=m
 CONFIG_IR_RC5_DECODER=m
 CONFIG_IR_RC6_DECODER=m
+CONFIG_IR_RCMM_DECODER=m
 CONFIG_IR_SANYO_DECODER=m
 CONFIG_IR_SHARP_DECODER=m
 CONFIG_IR_SONY_DECODER=m
@@ -801,17 +827,25 @@ CONFIG_IR_XMP_DECODER=m
 CONFIG_RC_DEVICES=y
 CONFIG_IR_GPIO_CIR=m
 CONFIG_IR_GPIO_TX=m
+CONFIG_IR_HIX5HD2=m
+CONFIG_IR_IGORPLUGUSB=m
 CONFIG_IR_IGUANA=m
 CONFIG_IR_IMON=m
+CONFIG_IR_IMON_RAW=m
 CONFIG_IR_MCEUSB=m
 CONFIG_IR_PWM_TX=m
 CONFIG_IR_REDRAT3=m
+CONFIG_IR_SERIAL=m
+CONFIG_IR_SERIAL_TRANSMITTER=y
+CONFIG_IR_SPI=m
 CONFIG_IR_STREAMZAP=m
 CONFIG_IR_TOY=m
 CONFIG_IR_TTUSBIR=m
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_LOOPBACK=m
+CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
+CONFIG_CEC_GPIO=m
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_DEV=m
 CONFIG_MEDIA_USB_SUPPORT=y
@@ -912,15 +946,29 @@ CONFIG_I2C_SI470X=m
 CONFIG_I2C_SI4713=m
 CONFIG_RADIO_WL128X=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_SDR_PLATFORM_DRIVERS=y
+CONFIG_DVB_PLATFORM_DRIVERS=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
 CONFIG_VIDEO_MUX=m
+CONFIG_VIDEO_CADENCE_CSI2RX=m
+CONFIG_VIDEO_CADENCE_CSI2TX=m
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIM2M=m
 CONFIG_VIDEO_VICODEC=m
 CONFIG_VIDEO_VIMC=m
 CONFIG_VIDEO_VIVID=m
+CONFIG_VIDEO_IMX208=m
+CONFIG_VIDEO_IMX214=m
 CONFIG_VIDEO_IMX219=m
 CONFIG_VIDEO_IMX258=m
+CONFIG_VIDEO_IMX274=m
 CONFIG_VIDEO_IMX290=m
+CONFIG_VIDEO_IMX319=m
+CONFIG_VIDEO_IMX334=m
+CONFIG_VIDEO_IMX335=m
+CONFIG_VIDEO_IMX355=m
+CONFIG_VIDEO_IMX412=m
 CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_OV5647=m
 CONFIG_VIDEO_OV7251=m
@@ -935,6 +983,8 @@ CONFIG_VIDEO_TW9903=m
 CONFIG_VIDEO_TW9906=m
 CONFIG_DRM=m
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+CONFIG_DRM_I2C_NXP_TDA998X=m
+CONFIG_DRM_I2C_NXP_TDA9950=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_PANEL_SIMPLE=m
 CONFIG_DRM_PANEL_ILITEK_ILI9881C=m
