`Debian Image Builder`
customize your image: custom.txt

options: ext4 btrfs xfs
FSTYPE="ext4"

options: true false
ENABLE_EFI="false"

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -199,6 +199,16 @@ sed -i '52i### TIMEZONE' userdata.txt
 sed -i '57i### NAME SERVER' userdata.txt
 sed -i '60i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
+# customize your image
+if [[ -f "custom.txt" ]]; then
+	:;
+else
+	echo "# filesystem types: ext4 btrfs xfs" > custom.txt
+	echo 'FSTYPE="ext4"' >> custom.txt
+	echo "# options: true false" >> custom.txt
+	echo 'ENABLE_EFI="false"' >> custom.txt
+fi
+
 # clear screen
 clear -x
 
