--- a/defconfig/bcmrpi_defconfig
+++ b/defconfig/bcmrpi_defconfig
@@ -486,13 +486,7 @@ CONFIG_DM_LOG_USERSPACE=m
 CONFIG_DM_RAID=m
 CONFIG_DM_ZERO=m
 CONFIG_DM_DELAY=m
-CONFIG_TARGET_CORE=y
-CONFIG_TCM_IBLOCK=m
-CONFIG_TCM_FILEIO=m
-CONFIG_TCM_PSCSI=m
-CONFIG_TCM_USER2=m
-CONFIG_LOOPBACK_TARGET=m
-CONFIG_ISCSI_TARGET=m
+# CONFIG_TARGET_CORE= is not set
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_WIREGUARD=m
