--- a/defconfig/mx6cuboxi_defconfig
+++ b/defconfig/mx6cuboxi_defconfig
@@ -248,12 +248,7 @@ CONFIG_ATA=y
 CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_AHCI_IMX=y
 CONFIG_PATA_IMX=y
-CONFIG_TARGET_CORE=m
-CONFIG_TCM_IBLOCK=m
-CONFIG_TCM_FILEIO=m
-CONFIG_TCM_PSCSI=m
-CONFIG_LOOPBACK_TARGET=m
-CONFIG_ISCSI_TARGET=m
+# CONFIG_TARGET_CORE= is not set
 CONFIG_NETDEVICES=y
 CONFIG_WIREGUARD=y
 # CONFIG_NET_VENDOR_3COM is not set
