--- a/defconfig/odroid-xu4-wip_defconfig
+++ b/defconfig/odroid-xu4-wip_defconfig
@@ -587,13 +587,7 @@ CONFIG_DM_SWITCH=m
 CONFIG_DM_LOG_WRITES=m
 CONFIG_DM_INTEGRITY=m
 CONFIG_DM_ZONED=m
-CONFIG_TARGET_CORE=y
-CONFIG_TCM_IBLOCK=m
-CONFIG_TCM_FILEIO=m
-CONFIG_TCM_PSCSI=m
-CONFIG_TCM_USER2=m
-CONFIG_LOOPBACK_TARGET=m
-CONFIG_ISCSI_TARGET=m
+# CONFIG_TARGET_CORE= is not set
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_WIREGUARD=m
