--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -421,13 +421,7 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
-CONFIG_TARGET_CORE=m
-CONFIG_TCM_IBLOCK=m
-CONFIG_TCM_FILEIO=m
-CONFIG_TCM_PSCSI=m
-CONFIG_TCM_USER2=m
-CONFIG_LOOPBACK_TARGET=m
-CONFIG_ISCSI_TARGET=m
+# CONFIG_TARGET_CORE= is not set
 CONFIG_NETDEVICES=y
 CONFIG_WIREGUARD=y
 CONFIG_TUN=y
