--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -393,12 +393,7 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_INIT=y
 CONFIG_DM_INTEGRITY=y
-CONFIG_TARGET_CORE=y
-CONFIG_TCM_IBLOCK=m
-CONFIG_TCM_FILEIO=m
-CONFIG_TCM_PSCSI=m
-CONFIG_LOOPBACK_TARGET=m
-CONFIG_ISCSI_TARGET=m
+# CONFIG_TARGET_CORE= is not set
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_WIREGUARD=y
