`Debian Image Builder`
general maintenance

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -212,5 +212,8 @@ fi
 # clear screen
 clear -x
 
-# userdata
-echo -e "${COL}userdata file created${FIN}."
+# userdata-txt
+if [[ -f "userdata.txt" ]]; then
+	echo -e "${COL}userdata file created${FIN}."
+	exit 0
+fi
