--- a/defconfig/bcmrpi3_defconfig
+++ b/defconfig/bcmrpi3_defconfig
@@ -83,6 +83,7 @@ CONFIG_BINFMT_MISC=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
+CONFIG_ZSMALLOC=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PAGE_REPORTING=y
 CONFIG_KSM=y
