--- a/defconfig/meson8b_defconfig
+++ b/defconfig/meson8b_defconfig
@@ -100,7 +100,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
-CONFIG_ZSMALLOC=m
+CONFIG_ZSMALLOC=Y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
