--- a/defconfig/mx6cuboxi_defconfig
+++ b/defconfig/mx6cuboxi_defconfig
@@ -86,6 +86,7 @@ CONFIG_BINFMT_MISC=m
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
+CONFIG_ZSMALLOC=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
