--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -97,6 +97,7 @@ CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+CONFIG_ZSMALLOC=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_NET=y
