--- a/defconfig/bcmrpi_defconfig
+++ b/defconfig/bcmrpi_defconfig
@@ -71,6 +71,7 @@ CONFIG_BINFMT_MISC=m
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=m
+CONFIG_ZSMALLOC=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PAGE_REPORTING=y
 CONFIG_KSM=y
