--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -1071,7 +1071,7 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
-CONFIG_UNICODE=m
+CONFIG_UNICODE=y
 CONFIG_ENCRYPTED_KEYS=m
 CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_SECURITY=y
