rockchip: `rk356x_defconfig`
maintenance

--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -553,6 +553,7 @@ CONFIG_ISCSI_BOOT_SYSFS=m
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
+CONFIG_AHCI_DWC=m
 # CONFIG_ATA_SFF is not set
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
@@ -774,6 +775,7 @@ CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_BATTERY_CW2015=y
 CONFIG_CHARGER_GPIO=y
+CONFIG_CHARGER_RK817=m
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_CORSAIR_CPRO=m
