make config: `networking`
0 ifupdown
1 networkmanager (default)

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -20,6 +20,7 @@ NAME=""
 USERNAME=""
 PASSWORD=""
 VERSION="$LATEST_LTS"
+networkmanager="1"
 useracct="0"
 LOCALE="en_US.UTF-8"
 TIMEZONE="America/New_York"
