rk3568: Add `CONFIG_NETFILTER_XT_TARGET_LOG=m`
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -202,6 +202,7 @@ CONFIG_NFT_CT=y
 CONFIG_NFT_FLOW_OFFLOAD=y
 CONFIG_NFT_CONNLIMIT=y
 CONFIG_NFT_LOG=y
+CONFIG_NETFILTER_XT_TARGET_LOG=m
 CONFIG_NFT_LIMIT=y
 CONFIG_NFT_MASQ=y
 CONFIG_NFT_REDIR=y
