--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -509,7 +509,10 @@ CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST=y
 CONFIG_SERIAL_DEV_BUS=y
-# CONFIG_HW_RANDOM is not set
+CONFIG_HW_RANDOM=y
+CONFIG_HW_RANDOM_CCTRNG=m
+CONFIG_HW_RANDOM_CN10K=m
+CONFIG_TCG_TPM=m
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_ARB_GPIO_CHALLENGE=m
