--- a/defconfig/khadas-edge2_defconfig
+++ b/defconfig/khadas-edge2_defconfig
@@ -1,4 +1,5 @@
-CONFIG_DEFAULT_HOSTNAME="localhost"
+# CONFIG_DEFAULT_HOSTNAME=""
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ=y
