--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -10,7 +10,6 @@ else
 	echo -e "The builder requires a internet connection."
 	exit 0;
 fi
-if [[ `command -v jq` ]]; then :; else echo -e "Missing depends: jq"; exit 0; fi
 JSON_FILE="https://kernel.org/releases.json"
 if [[ `curl -Ls $JSON_FILE | grep -w "version" | sed -n 4p | grep -w 5.15` ]]; then
 	LINE="4p";
@@ -20,6 +19,7 @@ fi
 LATEST_LTS=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LINE | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 LATEST_STABLE=$(curl -s $JSON_FILE | jq '.latest_stable.version' -r)
 GCC=`ls -ls /usr/bin/gcc | sed 's/.*\(..\)/\1/' | sed 's/ //g'`
+ARCH=`uname -m`
 
 NAME=""
 USERNAME=""
@@ -42,7 +42,7 @@ UBOOT_VERSION="v2022.10"
 BUILD_VERSION="1"
 menuconfig="0"
 COMPILER="gcc-$GCC"
-if [[ `uname -m | grep aarch64` ]]; then
+if [[ "$ARCH" == "aarch64" ]]; then
 	crosscompile="0"
 else
 	crosscompile="1"
