--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -969,6 +969,7 @@ CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_AUXDISPLAY=y
+CONFIG_OPENVFD=m
 CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
