--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -1034,18 +1034,17 @@ CONFIG_OPTEE=y
 CONFIG_MUX_GPIO=y
 CONFIG_MUX_MMIO=m
 CONFIG_VALIDATE_FS_PARSER=y
-CONFIG_EXT2_FS=m
+CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
 CONFIG_EXT2_FS_SECURITY=y
-CONFIG_EXT3_FS=m
+CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
-CONFIG_EXT4_FS=y
-CONFIG_XFS_FS=m
-CONFIG_BTRFS_FS=m
+CONFIG_XFS_FS=y
+CONFIG_BTRFS_FS=y
 CONFIG_BTRFS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS=m
+CONFIG_F2FS_FS=y
 # CONFIG_F2FS_FS_XATTR is not set
 CONFIG_F2FS_CHECK_FS=y
 CONFIG_FANOTIFY=y
