--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -969,6 +969,10 @@ CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_AUXDISPLAY=y
+CONFIG_HD44780=m
+CONFIG_IMG_ASCII_LCD=m
+CONFIG_HT16K33=m
+CONFIG_LCD2S=m
 CONFIG_OPENVFD=m
 CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=m
