--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -926,6 +926,11 @@ CONFIG_LEDS_TRIGGER_PATTERN=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_PROC is not set
 CONFIG_RTC_DRV_AS3722=m
+CONFIG_RTC_DRV_DS1307=m
+CONFIG_RTC_DRV_DS1307_CENTURY=y
+CONFIG_RTC_DRV_DS1374=m
+CONFIG_RTC_DRV_DS1374_WDT=y
+CONFIG_RTC_DRV_DS1672=m
 CONFIG_RTC_DRV_RK808=y
 CONFIG_DMADEVICES=y
 CONFIG_DW_AXI_DMAC=m
