`Debian Image Builder`
$BOARD" = "nanopir5c"
patches: nanopi 5 patching adjusted

--- a/defconfig/nanopi5_defconfig
+++ b/defconfig/nanopi5_defconfig
@@ -1,5 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_DEFAULT_HOSTNAME="localhost"
+# CONFIG_DEFAULT_HOSTNAME="localhost"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ=y
@@ -72,7 +72,6 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
-# CONFIG_EFI is not set
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
@@ -113,6 +112,9 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
+CONFIG_MODULE_SIG=y
+CONFIG_MODULE_COMPRESS=y
+CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
@@ -666,6 +668,7 @@ CONFIG_NVME_MULTIPATH=y
 CONFIG_AD525X_DPOT=m
 CONFIG_AD525X_DPOT_I2C=m
 CONFIG_AD525X_DPOT_SPI=m
+CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_EEPROM_AT24=m
@@ -1027,7 +1030,6 @@ CONFIG_SERIAL_SC16IS7XX_SPI=y
 CONFIG_SERIAL_DEV_BUS=m
 CONFIG_TTY_PRINTK=y
 CONFIG_HW_RANDOM=y
-CONFIG_HW_RANDOM_ROCKCHIP=y
 CONFIG_RAW_DRIVER=m
 CONFIG_TCG_TPM=m
 CONFIG_TCG_TIS_SPI=m
@@ -1855,8 +1857,6 @@ CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_TIME_FROM_ARM_ARCH_TIMER=y
 CONFIG_DYNAMIC_DEBUG=y
-# CONFIG_DEBUG_INFO= is not set
-CONFIG_DEBUG_INFO_REDUCED=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0
 CONFIG_SCHED_STACK_END_CHECK=y
