--- a/files/asound/tinker.conf
+++ b/files/asound/tinker.conf
@@ -1,11 +1,12 @@
-# enable analog audio
-#pcm.!default {
-#	type hw
-#	card 1
-#	device 2
-#}
-#
-#ctl.!default {
-#	type hw
-#	card 1
-#}
+# RTL ALC4040 ANALOG AUDIO PORT
+pcm.!default {
+	type hw
+	card 1
+	device 2
+	channels 2
+}
+
+ctl.!default {
+	type hw
+	card 1
+}
