--- a/files/boot/odroid/odroidc1-boot.ini
+++ b/files/boot/odroid/odroidc1-boot.ini
@@ -3,16 +3,10 @@ ODROIDC-UBOOT-CONFIG
 setenv uuid "root=PARTUUID="
 setenv rootfstype "rootfstype="
 setenv console "console=tty1 console=ttyAML0,115200n8 console=both"
-setenv extra "no_console_suspend net.ifnames=0 fsck.repair=yes"
+setenv extra "no_console_suspend net.ifnames=0 fsck.repair=yes video=HDMI-A-1:1920x1080M@60"
 #setenv hid_quirks "usbhid.quirks=0x0eef:0x0005:0x0004"
 
 # Boot Arguments
 setenv bootargs "${uuid} rootwait ro ${console} ${rootfstype} loglevel=1 ${extra}"
 
 # Booting
-fatload mmc 0:1 0x20800000 uImage
-fatload mmc 0:1 0x22000000 uInitrd
-fatload mmc 0:1 0x21800000 meson8b-odroidc1.dtb
-fdt addr 21800000
-
-bootm 0x20800000 0x22000000 0x21800000
